Fixes bug with dawgdrops menu hidden behind hero menu.

--- a/assets/sass/isc-styles.scss
+++ b/assets/sass/isc-styles.scss
@@ -308,7 +308,7 @@ body, p { font-size: 16px !important; }
         @include desktop { margin: 0 0 20px 0; padding:0; color:$uw-purple; }
     }
 
-    .hero-header-container { padding: 10px; z-index: 999; position: relative;
+    .hero-header-container { padding: 10px; z-index: 2; position: relative;
 
         @include tablet { padding: 30px; }
         @include desktop {
